tests/bind/good/function-call.py
def foo():
    return 0

def bar():
    return 0

def boo():
    return 0

def far():
    return 0

foo()
bar()
boo(1, 2)
far("test", "bar", True, 1)
