tests/bind/bad/bad-scope.py
def fun1():
    def fun2():
        return 0
    return fun2()

fun2()
